Add new favicon and site manifest files
- Added favicon images: favicon-16x16.png, favicon-32x32.png, and favicon.ico.
- Created site.webmanifest for PWA support with specified icons and colors.

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 	<!-- End Google Tag Manager -->
 		<link
 			rel="shortcut icon"
-			href="https://res.cloudinary.com/qualifier/image/upload/v1586850436/Default/Qualifier_128x128_ycrstr.svg"
+			href="/icons/favicon.ico"
 			type="image/x-icon"
 		/>
 		<meta
@@ -24,7 +24,7 @@
 		<meta name="copyright" content="Softechinfra" />
 		<meta name="robots" content="follow" />
 
-		<title>Qualifier | Online Test Series | Practice and Learing - FREE ( CBSE Exams | Government Exams | Placement Papers | ect.)</title>
+		<title>Test Platform</title>
 	</head>
 	<body>
 		<div id="root"></div>
